feat: push some smart contract logic with some tests

--- a/apps/contracts/foundry.toml
+++ b/apps/contracts/foundry.toml
@@ -27,6 +27,7 @@ remappings = [
     'forge-std/=node_modules/@layerzerolabs/toolbox-foundry/lib/forge-std',
     '@layerzerolabs/=node_modules/@layerzerolabs/',
     '@openzeppelin/=node_modules/@openzeppelin/',
+    'prb-math/=node_modules/@prb/math/src/',
 ]
 
 [fuzz]
