feat: add subgraph

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
   "[solidity]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "JuanBlanco.solidity"
+  },
+  "[yaml]": {
+    "editor.formatOnSave": false
   }
 }
