--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@repo/ui": "workspace:*",
     "@tanstack/react-query": "^5.81.5",
+    "@wagmi/cli": "^2.3.1",
     "connectkit": "^1.9.1",
     "next": "^15.3.0",
     "react": "^19.1.0",
